Renomeia imagem da logo para iniciaisAJ.png e atualiza referência no HTML

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="#">
-                    <img src="imagens/Gemini_Generated_Image_o09mwzo09mwzo09m.png" alt="logo Gemini"
+                    <img src="imagens/iniciaisAJ.png" alt="logo Gemini"
                         style="height: 100px; border-radius: 80px;"></a>
             </div><!-- "logo"  -->
 
@@ -95,7 +95,7 @@
                     </div><!--"txt-topo-site"   -->
 
                     <div class="img-topo-site">
-                        <img src="imagens/Gemini_Generated_Image_o09mwzo09mwzo09m.png"
+                        <img src="imagens/iniciaisAJ.png"
                             style="width: 300px; border: 2px solid #00ff08; border-radius: 200px;">
                     </div><!--img-topo-site  -->
                 </div><!--"flex"   -->
